# knowledge-builder

./: .gitignore  .mcp.json  CLAUDE.md  KICKOFF.md  RESUME.md
api/: openapi.yaml
framework/: .env.example  .secrets.local.yaml.example  pyproject.toml  requirements.txt  version.py
framework/adapters/: __init__.py  _base.py  code_wiki_builder.py  git_adapter.py  git_probe.py  udap_adapter.py  udap_probe.py
framework/cli/: __init__.py  _backfill_eng_bugs.py  kb_cli.py  recover_ask_parameterized_session.py  recover_bound_artifact_session.py
framework/config/: _schema.json  dev.yaml  persona_prompts.yaml  prod.yaml  shim_faaas.yaml  staging.yaml
framework/connectors/: __init__.py  registry.py
framework/core/: __init__.py  adb_pool.py  codex_proxy_runtime.py  content.py  emcp_runtime.py  ids.py  interfaces.py  llm.py  llm_oci.py  llm_openai.py  urns.py  vault.py
framework/deliverers/: __init__.py  _base.py  email.py  filesystem.py  object_storage.py  registry.py  slack.py  sync_return.py
framework/deploy/: __init__.py  cost_store.py  error_store.py  ingestion_worker.py  mcp_server.py  mcp_tools.py  mcp_transport.py  openapi.yaml  serialization.py  skill_prompt.py
framework/eval/: __init__.py  gold_set_feeder.py  prices.yaml  runner.py
framework/ingestion/: __init__.py  change_detection.py  confluence_wiki_ingest.py  pipeline.py  scheduler.py  webhook_router.py
framework/orchestrator/: __init__.py  budget.py  context_builder.py  intent_classifier.py  shim_faaas.py  shim_kb.py  shim_workflows.py  synthesizer.py
framework/parsers/: chunker.py  llm_parser.py
(+624 files in other folders)
